--- a/lesson_22/lessonTasks/index.scss
+++ b/lesson_22/lessonTasks/index.scss
@@ -47,7 +47,7 @@ html {
     border: 3px solid #ccc;
     border-radius: 8px;
 
-    & span:nth-child(n + 2) {
+    & span {
         margin-left: 8px;
     }
 }
